(fix) try bumping spacing to 3rem

--- a/css/site.css
+++ b/css/site.css
@@ -84,7 +84,7 @@ div#exp-carousel {
 
 @media only screen and (max-width: 500px) {
   .col-sm-10 {
-    margin-top: 1rem;
+    margin-top: 3rem;
   }
 }
 
